# archv3

./: .env.example  components.json  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
scripts/seeder/: category.ts  content-type.ts  content.ts  index.ts  metadata.ts  tag.ts
src/: app-router.tsx  app.tsx  dialog-coordinator.tsx  index.css  routes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  migrations.rs
src-tauri/src/datasets/: download_dataset_image.rs  fetch_datasets.rs  mod.rs
src-tauri/src/files/: copy_file.rs  fetch_files.rs  file_details.rs  get_available_disks.rs  get_folders.rs  get_parent_path.rs  get_path_segments.rs  highlight_path.rs  mod.rs  trash.rs
src/components/: alert-dialog.tsx  badge.tsx  breadcrumb.tsx  button.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  error-boundary.tsx  floating-dock.tsx  form.tsx  loading.tsx  menubar.tsx  pagination-controls.tsx  pagination.tsx  select.tsx  slider.tsx  sonner.tsx  table.tsx  tabs.tsx  toggle.tsx  tooltip.tsx
src/components/iconify/: picker.tsx  preview.tsx  renderer.tsx
src/layout/: breadcrumb.tsx  dock.tsx  general-search.tsx  header.tsx  index.tsx  router-tabs.tsx  settings.tsx  window-actions.tsx
src/layout/app-actions/: index.tsx
src/lib/: constants.ts  utils.ts
src/lib/hooks/: use-current-content-type.ts
src/lib/models/: category.ts  content-type.ts  content.ts  document.ts  file.ts  image.ts  metadata-attribute.ts  metadata-value.ts  settings.ts  tag.ts  video.ts
src/lib/services/: file.ts  iconify.ts
src/pages/: placeholder.tsx
(+48 files in other folders)
