[package]
name = "app"
version = "0.0.0"
description = "A Media app"
authors = ["you"]
edition = "2024"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
strip = true

[lib]
name = "archv3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
trash = "5.2.5"
uuid = { version = "1.19.0", features = ["v4"] }
reqwest = { version = "0.12.28", features = ["json"] }
tokio = "1.48.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
